@@ -23,17 +23,6 @@
 #include <libcob/common.h>
 
 extern void cob_move (cob_field *src, cob_field *dst);
-extern void cob_move_alphanum_to_display (cob_field *f1, cob_field *f2);
-extern void cob_move_display_to_display (cob_field *f1, cob_field *f2);
-extern void cob_move_display_to_alphanum (cob_field *f1, cob_field *f2);
-extern void cob_move_alphanum_to_alphanum (cob_field *f1, cob_field *f2);
-extern void cob_move_display_to_packed (cob_field *f1, cob_field *f2);
-extern void cob_move_packed_to_display (cob_field *f1, cob_field *f2);
-extern void cob_move_display_to_binary (cob_field *f1, cob_field *f2);
-extern void cob_move_binary_to_display (cob_field *f1, cob_field *f2);
-extern void cob_move_display_to_edited (cob_field *f1, cob_field *f2);
-extern void cob_move_alphanum_to_edited (cob_field *f1, cob_field *f2);
-
 extern void cob_memcpy (cob_field *dst, unsigned char *src, int size);
 extern void cob_set_int (cob_field *f, int n);
 extern int cob_get_int (cob_field *f);
